# webdav-client

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  file
examples/: attohttpc.rs  minreq.rs  reqwest_async.rs  reqwest_blocking.rs  ureq.rs
src/: lib.rs  main.rs  web_client.rs  webdav_types.rs
