[package]
name = "webdav-client"
version = "0.1.0"
edition = "2024"
categories = []
description = ""
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/webdav-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[lints.rust]
# missing_docs = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
default_trait_access = "allow"
wildcard_imports = "allow"
missing_errors_doc = "allow"
items_after_statements = "allow"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
camino = "1.1.9"
clap = { version = "4.5.26", features = ["derive", "env", "wrap_help"], path = "../clap" }
comfy-table = { version = "7.1.3", default-features = false, features = ["tty"] }
crowd = { version = "0.1.0", path = "../crowd" }
derive_more = { features = ["full"], git = "https://github.com/ModProg/derive_more", branch = "display-rename-all" }
format_xml = "0.3.0"
futures-util = "0.3.31"
http = "1.3.1"
humansize = "2.1.3"
intentional = "0.1.1"
minreq = { version = "2.13.2", features = ["https"] }
percent-encoding = "2.3.1"
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
reqwest_dav = "0.1.14"
serde = { version = "1.0.217", features = ["derive"] }
time = { version = "0.3.39", features = ["formatting", "parsing"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
ureq = "3.0.8"
url = "2.5.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
